($Id: ChangeLog,v 1.38 2001-05-25 13:23:55 rufustfirefly Exp $)

2001-05-25  jeff b  <jeff@univrel.pr.uconn.edu>
	* etc/uams/uams_passwd.c: another Tru64 fix from Burkhard
	Schmidt <bs@cpfs.mpg.de>

2001-05-22  jeff b  <jeff@univrel.pr.uconn.edu>
	* configure.in, etc/afpd/unix.h: more portability fixes, and
	integration of Tru64 build fix from Edmund Lam <epl@unimelb.edu.au>

	* configure.in, bin/megatron/Makefile.am,
	distrib/initscripts/Makefile.am, etc/afpd/main.c,
	etc/afpd/quota.c, etc/afpd/unix.h,
	etc/uams/uams_dhx_passwd.c, etc/uams/uams_passwd.c: Another
	round of Tru64 patches from Burkhard Schmidt <bs@cpfs.mpg.de>

2001-05-09  jeff b  <jeff@univrel.pr.uconn.edu>
	* autogen.sh: added automake --include-deps to autogen.sh to
	promote more portable Makefiles (thanks to Christian
	Weisgerber <naddy@mips.inka.de> from OpenBSD)

2001-05-08  jeff b  <jeff@univrel.pr.uconn.edu>

	* bin/megatron/Makefile.am, etc/uams/Makefile.am: small Makefile fixes
	from Olaf Hering <olh@suse.de>

	* etc/uams/uams_dhx_passwd.c: Tru64 fixes from Burkhard Schmidt
	<bs@cpfs.mpg.de>

2001-05-07  jeff b  <jeff@univrel.pr.uconn.edu>

	* contrib/shell_utils/netatalkshorternamelinks.pl: added script to
	shorten names

	* etc/afpd/quota.c, etc/uams/uams_passwd.c: patches from Burkhard
	Schmidt <bs@cpfs.mpg.de> to fix typos

2001-05-03  jeff b  <jeff@univrel.pr.uconn.edu>

	* etc/afpd/quota.c, etc/afpd/unix.h, etc/afpd/main.c,
	etc/uams/uams_passwd.c: Tru64 patch from Burkhard Schmidt <bs@cpfs.mpg.de>

	* configure.in, etc/afpd/quota.c, etc/afpd/unix.h: fixes for USE_*_H
	moving to autodetected HAVE_*_H from autoconf script

2001-05-01  jeff b  <jeff@univrel.pr.uconn.edu>

	* bin/aecho/aecho.c, bin/getzones/getzones.c, bin/megatron/asingle.c,
	bin/megatron/hqx.c, bin/megatron/macbin.c, bin/megatron/megatron.c,
	bin/megatron/nad.c, bin/megatron/updcrc.c, libatalk/atp/atp_bprint.c,
	libatalk/util/getiface.c: warnings patch from Sebastian Rittau
	<srittau@users.sourceforge.net> (#420300)
